.helm-development/templates/vocascan-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vocascan-network
  namespace: vocascan
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.network/vocascan-network: "true"
      ports: []
  podSelector:
    matchLabels:
      io.network/vocascan-network: "true"
  policyTypes:
    - Ingress
